Эксперименты с различными GC[#110212]